# elykseer-crypto

./: .drone.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  default.nix  elykseer-crypto.sln  shell.nix
.gitea/workflows/: CI-nix.yaml
.github/workflows/: CI.yml  semgrep.yml
build.old/: CMakeLists.txt
build.old/src/: CMakeLists.txt
build.old/test/: CMakeLists.txt
ci/: Jenkinsfile.FreeBSD  Jenkinsfile.Linux  Jenkinsfile.Linux-nix  Jenkinsfile.OSX
elykseer-crypto-cpp/: elykseer-crypto-cpp.mdproj
elykseer-crypto-cs/: elykseer-crypto-cs.mdproj
ext/: Makefile  README  README.md  x_Darwin_to_Windows.sh
src/: copyright.md
src/cpp/: ._aes_-omega-.md  ._key128_-omega-.md  ._key128_ctor.cpp.md  ._key256_-omega-.md  ._key256_ctor.cpp.md  ._key_-alpha-.md  ._key_-omega-.md  ._key_ctor.cpp.md  ._md5_-omega-.md  ._random_-omega-.md  ._random_ctor.cpp.md  ._sha256_-omega-.md  CMakeLists.txt  aes.hpp.md  aes.ixx  aes_-alpha-.md  aes_cbindings.cpp  aes_cbindings.cpp.md  aes_cryptopp.cpp  aes_cryptopp.cpp.md  aes_openssl.cpp  aes_openssl.cpp.md  base64.cpp  base64.hpp.md  base64.ixx  base64_-alpha-.md  base64_cbindings.cpp  base64_cbindings.cpp.md  base64_cryptopp.cpp  base64_functions.cpp.md  base64_openssl.cpp  elykseer-crypto.md  global.cpp  global.ixx  global_cbindings.cpp  gpg.cpp  gpg.hpp.md  gpg.ixx  gpg_-alpha-.md  gpg_ctor.cpp.md  (+83 more)
src/csharp/: .gitignore  AesDecrypt.cs  AesEncrypt.cs  Key128.cs  Key256.cs  Md5.cs  README  Sha256.cs  aes.i  clean.sh  elykseer-crypto-cs.csproj  elykseer-crypto-cs.dll.config  elykseer-crypto-cs.sln  elykseer-crypto.dll.config  key128.i  key256.i  mk_Linux.sh  mk_OSX.sh  runme.cs  sha256.i
src/csharp/Properties/: AssemblyInfo.cs
src/csharp/elykseer-crypto-app/: Program.cs  elykseer-crypto-app.csproj
src/csharp/elykseer-crypto-cs-tests/: UnitTest1.cs
src/csharp/old/: AesEncrypt.cs
src/csharp/old/Properties/: AssemblyInfo.cs
src/csharp/old/elykseer-crypto-app/Properties/: AssemblyInfo.cs
src/csharp/old/elykseer-crypto-cs-tests/: elykseer-crypto-cs-tests.csproj
src/csharp/swig/: README  clean.sh  key128.i  key256.i  md5.i  mk_OSX.sh  runme.cs
src/ml/: .gitignore  README  aes.i  dune-project  key128.i  key256.i  md5.i  mk_Linux.sh  mk_OSX.sh  runme.ml  sha256.i
src/ml/lib/: aes256.cxx  aes256.ml  aes256.mli  aes256decrypt.cxx  aes256encrypt.cxx  base64.cxx  base64.ml  base64.mli  dune  global.cxx  global.ml  global.mli  hmac.cxx  hmac.ml  hmac.mli  key128.cxx  key128.ml  key128.mli  key160.cxx  key160.ml  key256.cxx  key256.ml  md5.cxx  md5.ml  md5.mli  random.cxx  random.ml  random.mli  sha256.cxx  sha256.ml  sha256.mli  sha3_256.cxx  sha3_256.ml
support/: Toolchain_Darwin_to_Windows.cmake
test/cpp/: CMakeLists.txt  elykseer-crypto-ut.md  utAes.cpp  utAes.cpp.md  utBase64.cpp  utGpg.cpp  utGpg.cpp.md  utHMAC.cpp  utHMAC.cpp.md  utKey128.cpp  utKey128.cpp.md  utKey160.cpp  utKey160.cpp.md  utKey256.cpp  utKey256.cpp.md  utMain.cpp  utMain.cpp.md  utMd5.cpp  utMd5.cpp.md  utRandList.cpp  utRandom.cpp  utSha256.cpp  utSha256.cpp.md  utSha3.cpp  utSha3.cpp.md
