(library
 (name elykseer_crypto)
 (public_name elykseer_crypto)
 (preprocess
  (pps ppx_optcomp))
 (no_dynlink)
 (modules key128 key160 key256 aes256 random sha256 hmac base64)
 (c_library_flags :standard -lstdc++)
 (foreign_stubs (language cxx) (flags :standard -I ../../../../../ext -I ../../../../../build/src -std=c++20 -fno-exceptions)
   (names key128 key160 key256 aes256 random sha256 hmac base64))
 (foreign_archives elykseer-crypto_cpp)
 (libraries unix mlcpp_cstdio)
)

; copy the native libraries to the build directory and install them
(rule
   (deps ../../../build/src/libelykseer-crypto.a)
   (targets libelykseer-crypto_cpp.a )
   (action
     (no-infer
      (progn 
       (copy ../../../build/src/libelykseer-crypto.a libelykseer-crypto_cpp.a)
      )))
)
